samples/_failures_safe/1761294785_1ccdb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b17af247.c: In function ‘print_stats’:
./samples/SAFE/__tmp_b17af247.c:132:12: error: missing terminating " character
  132 |     printf("W
      |            ^~
./samples/SAFE/__tmp_b17af247.c:132:5: error: expected expression at end of input
  132 |     printf("W
      |     ^~~~~~
./samples/SAFE/__tmp_b17af247.c:132:5: error: expected declaration or statement at end of input
